updating to java 8